Refactor list collection methods to use `toList()` for improved readability and enforce unmodifiable collections where applicable